# Scraper-leilao-caixa

./: .gitignore  CHANGELOG.md  CIDADES_DF_ADICIONADAS.md  CIDADES_DF_CORRIGIDAS.md  ESTRUTURA_ORGANIZADA.md  GITHUB_ACTIONS_SETUP.md  ORGANIZACAO_CONCLUIDA.md  PLANO_ORGANIZACAO.md  PROGRESSO_REFATORACAO.md  README.md  README_EXTRACAO_CAIXA.md  REFATORACAO_V1.1.md  RESUMO_EXECUTIVO.md  ROADMAP_ATUALIZADO_2025.md  Untitled.ipynb  analise_estrutura_caixa_20250710_105411.txt  analise_estrutura_caixa_20250710_105614.txt  buscar_codigos_cidades.py  buscar_codigos_direto.py  config_scraper.bat  configuracao_cidades.json  debug_page_structure.py  debug_pagina_20250811_093849.html  encontrar_url_correta.py  executar_scraper_automatico.bat  install.bat  install.sh  investigacao_site.txt  investigar_codigos_cidades.py  investigar_estrutura_atual.py  investigar_site_leiloes.py  mostrar_cidades_configuradas.py  pyproject.toml  relatorio_detalhado_20250716_204728.txt  relatorio_detalhado_20250716_212140.txt  relatorio_detalhado_20250717_143148.txt  relatorio_detalhado_20250717_145401.txt  relatorio_detalhado_20250717_151456.txt  relatorio_resumido_20250716_205544.txt  relatorio_resumido_20250716_212140.txt  (+25 more)
.github/workflows/: scraper-daily.yml  test-scraper.yml  test-simples.yml
arquivos_antigos/: Untitled1.ipynb  Untitled2.ipynb  analise_estrutura_caixa_20250710_105711.txt  scraper_caixa_joinville.py  scraper_caixa_joinville_corrigido.py  scraper_interativo_caixa.py  scraper_melhorado.py  scraper_simples_caixa.py  setup.py
config/: atualizar_codigos_cidades.py  cidades_config.py  configurar_email.py  configurar_gmail.py  configurar_gmail_multiplos.py  email_config.py  environment.py  extrair_codigos_manualmente.py  gerar_email_temporario.py  investigar_site_atual.py  logging_config.py  teste_aguardar_cidades.py  teste_envio_email.py  teste_envio_email_simples.py  teste_relatorio_novo.py  teste_scraper_automatico.py  teste_simples_cidades.py
dados_imoveis/: .gitkeep
docs/: GUIA_CONFIGURACAO_GMAIL.md  README.md  RESUMO_LIMPEZA_E_ATUALIZACAO.md
docs/ci-cd/: CI_CD_CONFIGURACAO.md
relatorios/: investigacao_site.txt  relatorio_detalhado_20250716_205544.txt  relatorio_detalhado_20250717_114022.txt  relatorio_detalhado_20250717_121718.txt  relatorio_detalhado_20250717_123436.txt  relatorio_detalhado_20250717_123745.txt  relatorio_resumido_20250717_123745.txt  requirements.txt  resposta_cidades_MS.txt  resposta_cidades_SC.txt  resposta_cidades_SP.txt  teste_relatorio_detalhado_20250716_200109.txt  teste_relatorio_detalhado_20250717_135419.txt  teste_relatorio_resumido_20250716_200109.txt
screenshots/: 2025-07-17
scripts/: README.md  buscar_codigos.bat  configurar_gmail.bat  executar_direto.bat  executar_scraper.bat  rodar_scraper.bat
testes/: teste_email_robusto.py  teste_script_automatico.py  teste_sp.py
utils/: retry.py  validation.py
(+27 files in other folders)
